@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Unix-Syslog/Unix-Syslog-1.100.0.ebuild,v 1.1 2011/08/28 09:24:26 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Unix-Syslog/Unix-Syslog-1.100.0.ebuild,v 1.2 2012/02/24 10:43:26 ago Exp $
 
 EAPI=4
 
@@ -12,5 +12,5 @@ DESCRIPTION="A Perl module which provides access to the system logger"
 
 SLOT="0"
 LICENSE="Artistic-2"
-KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86"
+KEYWORDS="~alpha amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86"
 IUSE=""
